fix z-index on modal so that it stays above mobile hamburger menu

--- a/sass/05_layout/_modal.scss
+++ b/sass/05_layout/_modal.scss
@@ -19,7 +19,7 @@
 .bground {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 11;
   left: 0;
   top: 0;
   height: 100%;
